k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  labels: 
    app: db
  name: db
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - image: postgres:16.3-alpine3.20
          name: postgres
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-data
            - mountPath: /etc/secret-volume
              name: secret-volume
              readOnly: true
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-data-pvc
        - name: secret-volume
          secret: 
            secretName: secret-db
