k8s/drupal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: drupal
  namespace: default
  labels: 
    app: drupal

spec:
  replicas: 1
  selector:
    matchLabels:
      app: drupal
  template:
    metadata:
      labels:
        app: drupal
    spec:
      containers:
        - image: aviumlabs/drupal:latest-bookworm
          name: drupal 
          ports:
            - containerPort: 80
              name: web 
          volumeMounts:
            - mountPath: /var/www/html
              name: drupal-data
            - mountPath: /var/www/html/modules/custom
              name: custom-modules
            - mountPath: /etc/secret-volume
              name: secret-volume
              readOnly: true
      volumes:
        - name: drupal-data
          persistentVolumeClaim:
            claimName: drupal-data-pvc
        - name: custom-modules
          hostPath:
            path: /local/custom/modules/path
        - name: secret-volume
          secret:
            secretName: secret-db
