k8s/drupal-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: drupal
  labels: 
    app: drupal

spec:
  replicas: 1
  selector:
    matchLabels:
      app: drupal
  template:
    metadata:
      labels:
        app: drupal
    spec:
      containers:
        - image: aviumlabs/drupal:latest-bookworm
          name: drupal 
          ports:
            - containerPort: 80
              name: web 
          volumeMounts:
            - mountPath: /var/www/html
              name: drupal-data
            - mountPath: /etc/secret-volume
              name: secret-volume
              readOnly: true
      volumes:
        - name: drupal-data
          persistentVolumeClaim:
            claimName: drupal-data-pvc
        - name: secret-volume
          secret:
            secretName: secret-db
