k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db 
  namespace: default
  labels:
    app: db 
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: db
