k8s/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db

spec:
  ports:
    - name: postgres 
      port: 5432 

  selector:
    app: db
