k8s/drupal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drupal
  namespace: default

spec:
  ports:
    - name: web 
      port: 80
      targetPort: 80 

  selector:
    app: drupal
