k8s/traefik-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: rp-dashboard
  namespace: default

spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: dashboard
  selector:
    app: rp 
---
apiVersion: v1
kind: Service
metadata:
  name: rp-web

spec:
  type: LoadBalancer
  ports:
    - targetPort: web 
      port: 80
  selector:
    app: rp
